[project]
name = "keplerai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Erick Díaz", email = "erickdp@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pendulum>=3.0.0",
]

[project.scripts]
keplerai = "keplerai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
